--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-hiddenFiles
-D:/codeProjects/0ChrysomallosBot/hiddenFiles
-.venv
-tFile.py
 __pycache__
-D:/codeProjects/ChrysomallosBot/__pycache__
+__pycache__\tFile.cpython-312.pyc
+.venv
+hiddenFiles
+tFile.py
