--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 __pycache__
-__pycache__\tFile.cpython-312.pyc
+D:\codeProjects\ChrysomallosBot\__pycache__
+__pycache__
 .venv
 hiddenFiles
 tFile.py
